# StockSage

./: README.md  agents.py  app.py  dependencies.txt  generate_pdf.py  pyproject.toml  utils.py
stock_portfolio_analyzer/: app.py  gemini_integration.py  portfolio_analysis.py  user_manual.md
