[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.50.0",
    "google-generativeai>=0.8.5",
    "markdown>=3.8",
    "matplotlib>=3.10.1",
    "mdpdf>=0.0.18",
    "openai>=1.76.0",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "plotly>=6.0.1",
    "streamlit>=1.44.1",
    "weasyprint>=65.1",
    "yfinance>=0.2.56",
]
